# bok-compensation-regulations

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  b64_write.py  chain_renderer.py  clear_output.txt  docker-compose.yml  extracted_pdf.txt  fix_app.py  fix_context_imports.py  fix_neo4j2.py  fix_ui_block.py  insights_9.txt  measure_tokens.py  output.txt  output_verbose.txt  output_verbose_final.txt  output_verbose_final2.txt  patch_insert_data.py  pyproject.toml  result.txt  result_err.txt  run_50_tests.py  run_9_insights.py  run_comparison.py  run_comparison_quick.py  run_test.py  run_tests.py  run_typedb_q4.py  run_typedb_q4_verbose.py  run_typedb_test.py  setup.sh  test_v.sh  trace_test.txt  update_typedb_agent.py  verify_overrides.py
.streamlit/: config.toml
docs/: context_preprocessing_guide.md  context_rag_failures.md  neo4j_browser_queries.md  neo4j_schema_diagram.md  project_bootstrap_prompt.md  schema_diagram.md
docs/system_improvements/: 2026-03-18.md
schema/: compensation_regulation.tql
src/bok_compensation/: __init__.py  check_db.py  connection.py  deterministic_executor.py  graph_query_demo.py  hybrid_router_graph.py  insert_data.py  langgraph_query.py  live_catalog.py  llm.py  load_schema.py  nl_query.py  override_resolver.py  override_utils.py  planner_utils.py  query_retrieval.py  query_rules.py  (+3 more)
tests/: test_deterministic_executor.py  test_intent_extraction.py  test_nl_pipeline.py  test_nl_regressions.py  test_nl_router.py  test_override_resolver.py  test_override_sections.py  test_query_rules.py  test_typedb_router.py  validate_data.py
(+25 files in other folders)
